Test revealed a padding issue on mobile.

--- a/src/template/basic/_main.scss
+++ b/src/template/basic/_main.scss
@@ -126,7 +126,7 @@ main {
         grid-template-columns: 300px auto;
         grid-template-rows: auto;
         .sidebar {
-            // height: 95vh;
+            padding: 0;
             grid-template-areas: "title"
                                  "avatar"
                                  "bio"
